<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_question"
        android:text="@string/total_questions"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/choices_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="This will be the question"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_A"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_a"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_B"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_b"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_C"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_c"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_D"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_d"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/submit"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="40dp"/>



</RelativeLayout>